@@ -3,6 +3,7 @@
 ## build 2021
 * cleanup intermediate files
 * add privacy-policy info
+* add projects report plots package and function
 
 ## build 20210823
 * update ENA portal api URL for metadata checking
